--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<style>
+.ghgh
+{
+border: 5px solid black;
+}
+.trt
+{
+color: yellow;
+}
+.q{
+color: yellow;
+}
+</style>
+</head>
+<center>
+<body style="background-color:pink;">
+<div class="ghgh">
+<form >
+<h1>Sign Up</h1>
+<h3 style="color: grey;">Please fill in this form to make an account</h3>
+<input type="text" placeholder="Username">
+<br>
+<input type="email" placeholder="Email Address">
+<br>
+<input type="password" placeholder="Password">
+<br>
+<input type="password" placeholder="Confirm password">
+<br>
+<input type="checkbox"> I accept <span class="trt">the terms of uses</span> and <span class="q">privacy policy</span>
+<br>
+<input type="button" value="Sign up">
+</center>
+ 
+ 
+ 
 
+
+</form>
+</div>
+</body>
+</html>
